# FlexChain

./: .gitignore  CMakeLists.txt  Makefile  benchmark.cc  benchmark.h  compute_server.cc  compute_server.h  config.h  core_manager.h  log.h  memory_server.cc  memory_server.h  orderer.cc  orderer.h  setup.sh  setup_1.sh  setup_2.sh  setup_ib.cc  setup_ib.h  start_all.sh  statistics.cc  statistics.h  storage_server.cc  test_roce.sh  utils.cc  utils.h
backupcode/: CoreManager.cc  statistics_code.cc  statistics_code.cc.bka
bandwidth/: adjust.sh  detect.sh
commented_codes/: compute_server.h  order.cc  testFstream.c
model/: best_model-YCSB_05221446.pth  best_model_KMEANS_05221621.pth  best_model_YCSB_05121418.pth  checkpoint_1000.pth  interrupted_model_YCSB_-05221446.pth  interrupted_model_kmeans_05221640.pth
myconfig/: compute.config  consensus.config  example-run.sh  memory.config  test.sh
myconfig copy/: compute.config  memory.config
myconfig1/: compute.config  example-run.sh
myconfig2/: compute.config  consensus.config
myconfig3/: compute.config  consensus.config  memory.config  test-run.sh
proto/: CMakeLists.txt  memory_config.proto  rl_agent.proto
rl_agent/: agent.py  memory.py  model.py  plot_performance.py  plot_v3.py  requirements.txt  rl_agent_pb2.py  rl_agent_pb2_grpc.py  rl_env.py  set_py_grpc.sh  simulation_env.py  test_rainbow.py  test_sim.py  train_rainbow.py
rl_agent/logs/performance_data/: performance_log_20250524_173100.csv
rl_agent/processed_data/: kmeans_size_2.csv  ycsb_size_2.csv  ycsb_size_3.csv
rl_agent/results/: checkpoint_1000.pth  checkpoint_2000.pth  checkpoint_3000.pth  checkpoint_4000.pth  checkpoint_5000.pth  checkpoint_6000.pth  checkpoint_7000.pth  checkpoint_8000.pth  checkpoint_9000.pth  interrupted_model.pth  memfile
rl_agent/results/simulate_train/: checkpoint_0.pth  checkpoint_1000.pth  interrupted_model.pth  memfile
static_data/: process.py
static_data/processed_data/: kmeans_size_1.csv  kmeans_size_3.csv  small_size_1.csv  small_size_2.csv  small_size_3.csv  ycsb_size_1.csv
test/: ztest  ztest.cc
